--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ on:
     tags:
       - "v*.*.*"
 
+env:
+  PLUGIN_JSON: "0.0.1"
+
 jobs:
   test:
 
@@ -29,12 +32,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f my_plugin/requirements.txt ]; then pip install -r my_plugin/requirements.txt; fi
-      - name: Publish GitHub release
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Get version
+        run: |
+          echo 'PLUGIN_JSON<<EOF' >> $GITHUB_ENV
+          cat ./my_plugin/plugin.json >> $GITHUB_ENV
+          echo 'EOF' >> $GITHUB_ENV
+      - name: Publish tag
+        uses: rickstaa/action-create-tag@v1
         with:
-          tag_name: ${{ github.ref }}
-          draft: false
-          prerelease: false
+          tag: "${{fromJson(env.PLUGIN_JSON).version}}"
+          tag_exists_error: false
+          message: "Latest release"
 
