--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ permissions:
 
 env:
   PLUGIN_JSON: "0.0.1"
+  TAG_EXISTS: false
 
 jobs:
   test:
@@ -42,6 +43,7 @@ jobs:
           cat ./my_plugin/plugin.json >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
       - name: Publish tag
+        if: env.TAG_EXISTS == false
         uses: rickstaa/action-create-tag@v1
         with:
           tag: "${{fromJson(env.PLUGIN_JSON).version}}"
