--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,4 +49,21 @@ jobs:
           tag: "${{fromJson(env.PLUGIN_JSON).version}}"
           tag_exists_error: false
           message: "Latest release"
+      - name: Zip Release
+        uses: TheDoctor0/zip-release@0.7.1
+        with:
+          type: 'zip'
+          filename: 'my_plugin.zip'
+          directory: './my_plugin'
+          path: '.'
+      - name: Upload Release
+        uses: ncipollo/release-action@v1.12.0
+        with:
+          tag: "${{fromJson(env.PLUGIN_JSON).version}}"
+          artifacts: './my_plugin/my_plugin.zip'
+          allowUpdates: true
+          replacesArtifacts: true
+          body: |
+            ${{ github.event.head_commit.message }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
