--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,13 +54,13 @@ jobs:
         with:
           type: 'zip'
           filename: 'my_plugin.zip'
-          directory: './my_plugin'
-          path: '.'
+          directory: '.'
+          path: './my_plugin'
       - name: Upload Release
         uses: ncipollo/release-action@v1.12.0
         with:
           tag: "${{fromJson(env.PLUGIN_JSON).version}}"
-          artifacts: './my_plugin/my_plugin.zip'
+          artifacts: 'my_plugin.zip'
           allowUpdates: true
           replacesArtifacts: true
           body: |
