--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
     tags:
-      - "v*.*.*"
+      - "*.*.*"
 
 permissions:
   contents: write
@@ -36,11 +36,11 @@ jobs:
       - name: Install pip dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f my_plugin/requirements.txt ]; then pip install -r my_plugin/requirements.txt; fi
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Get version
         run: |
           echo 'PLUGIN_JSON<<EOF' >> $GITHUB_ENV
-          cat ./my_plugin/plugin.json >> $GITHUB_ENV
+          cat ./plugin.json >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
       - name: Publish tag
         if: env.TAG_EXISTS == false
@@ -55,7 +55,7 @@ jobs:
           type: 'zip'
           filename: 'my_plugin.zip'
           directory: '.'
-          path: './my_plugin'
+          path: '.'
       - name: Upload Release
         uses: ncipollo/release-action@v1.12.0
         with:
