--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,23 +21,10 @@ env:
 
 jobs:
   release:
-
-    strategy:
-      matrix:
-        python-version: ["3.10"]
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install pip dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Get version
+      - name: Get plugin version
         run: |
           echo 'PLUGIN_JSON<<EOF' >> $GITHUB_ENV
           cat ./plugin.json >> $GITHUB_ENV
@@ -49,7 +36,7 @@ jobs:
           tag: "${{fromJson(env.PLUGIN_JSON).version}}"
           tag_exists_error: false
           message: "Latest release"
-      - name: Zip Release
+      - name: Zip release
         uses: TheDoctor0/zip-release@0.7.1
         with:
           type: 'zip'
@@ -57,7 +44,7 @@ jobs:
           exclusions: '*.git* setup.py'
           directory: '.'
           path: '.'
-      - name: Upload Release
+      - name: Upload release
         uses: ncipollo/release-action@v1.12.0
         with:
           tag: "${{fromJson(env.PLUGIN_JSON).version}}"
